# ocopy

./: .gitignore  .travis.yml  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: simple.py
ocopy/: ascmhl_seal.py  backup_check.py  checkpoint.py  copy.py  dot_hash.py  file_info.py  hash.py  ignored.py  mhl.py  progress.py  sleep_inhibit.py  utils.py  verified_copy.py
ocopy/cli/: ocopy.py  update.py
ocopy/tests/: test_copy.py
tests/: ascmhl_validation.py  conftest.py  test_ascmhl_seal.py  test_backup_check.py  test_checkpoint.py  test_cli.py  test_copy.py  test_destination_failure.py  test_examples.py  test_find_hash_ascmhl.py  test_hash_caching.py  test_mhl.py  test_progress.py  test_resume.py  test_skip_integrity.py  test_sleep_inhibit.py  test_update.py  test_utils.py
